--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -123,13 +123,19 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:layout_height="wrap_content"
       android:layout_below="@+id/textOpMode"
       android:layout_above="@+id/textGamepad1">
-
+<!--
       <LinearLayout
           android:id="@+id/cameraMonitorViewId"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           />
+-->
+      <org.opencv.android.JavaCameraView
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:id="@+id/beacon_color_detect_view" />
+
 
       <!-- When visible, the error message will overlay and thus partially
            obscure part of the camera monitor. We make this trade off so as to
